src/main/resources/Krakatau-master/tests/assembler/good/longsymrefchain.j
###preprocess###
.class public [s0]
.super java/lang/Object

.const [s67890] = Class longsymrefchain

###range(67890,):.const [s{}] = [s{ip1}]
###
.end class