src/main/resources/Krakatau-master/tests/assembler/bad/bscpmixup2.j
.class public whocares
.super java/lang/Object

.const [1] = Bootstrap [1] :
.end class
